...
                android:textSize="16sp"
            app:fontFamily="@font/roboto_thin"
                android:textColor="#ffffff"
                android:background="@drawable/radiobutton_background"/>

        <TextView
            android:id="@+id/next_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="48dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
...
