...
            android:textSize="20sp"
            app:fontFamily="@font/roboto_condensed_bold"
            android:textColor="#ffffff"
            android:background="@drawable/radiobutton_background"/>

        <TextView
            android:id="@+id/finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:layout_gravity="end"
            android:textAllCaps="false"
            android:text="Finish"
...
